# rll_robot_playground_project

./: .gitignore  .gitlab-ci.yml  .rll_submit_ignore  CMakeLists.txt  README.md  package.xml  robot_playground_project.rosinstall
.ci/: linting.sh
config/: playground_cell.srdf.xacro
include/rll_robot_playground_project/: playground_iface.h
launch/: hello_world.launch  move_sender.launch  moveit.rviz  moveit_planning_execution.launch  moveit_testing_sender.launch  playground_iface.launch  run_your_code.launch  setup_simulation.launch  submit_project.launch  tower_hanoi.launch  tower_hanoi.launch~
scripts/: greetings.py  hello_world.py  hello_world_services.py  playground.py  target_spawn.py  tower_hanoi.py
src/: hello_world.cpp  hello_world_services.cpp  playground.cpp  playground_iface.cpp  playground_iface_node.cpp
tests/launch/: demo_tests.test
tests/scripts/: demo_tests_main.py
urdf/: playground_env.urdf.xacro
